--- a/index.html
+++ b/index.html
@@ -30,17 +30,19 @@
             </a>
         </section>
         <section class="profile-link">
-            <a href="perfil.html">Sobre mí</a>
+            <a href="perfil.html">¿Quien soy?</a>
         </section>
     </nav>
 </header>
 <main>
-    <section class="main-title-container">
-        <h1 class="main-title"> Proyectos, novedades y noticias del mundo tech</h1>
-    </section>
-    <section class="main-button-container">
-        <button class="main-button"> <a href="">Entra ya!</a></button>
-    </section>
+    <div class="main-container">
+        <section class="main-title-container">
+            <p class="main-title"> Proyectos, novedades y noticias del mundo tech</p>
+        </section>
+        <section class="main-button-container">
+            <button class="main-button"> <a href="">Entra ya!</a></button>
+        </section>
+    </div>
 </main>
 </body>
 </html>
