las urls de los links

--- a/blogs.html
+++ b/blogs.html
@@ -16,11 +16,11 @@
 <header>
     <section class="header-icons-container">
         <div class="icons">
-            <a href="/"><span><i class="fab fa-facebook"></i></span></a>
-            <a href="/"><span><i class="fab fa-twitter-square"></i></span></a>
-            <a href="/"><span><i class="fab fa-instagram-square"></i></span></a>
-            <a href="/"><span><i class="fab fa-linkedin"></i></span></a>
-            <a href="/"><span><i class="fab fa-youtube"></i></span></a>
+            <a href="https://www.facebook.com/orlando.nabil1"><span><i class="fab fa-facebook"></i></span></a>
+            <a href="https://www.facebook.com/orlando.nabil1"><span><i class="fab fa-twitter-square"></i></span></a>
+            <a href="https://www.instagram.com/orlando_nabil/"><span><i class="fab fa-instagram-square"></i></span></a>
+            <a href="https://www.instagram.com/orlando_nabil/"><span><i class="fab fa-linkedin"></i></span></a>
+            <a href="https://www.youtube.com/watch?v=dMsB-n2t4Ks"><span><i class="fab fa-youtube"></i></span></a>
         </div>
     </section>
     <nav>
@@ -36,7 +36,7 @@
 </header>
 <main>
     <section>
-        
+
     </section>
     <section>
 
