--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="https://kit.fontawesome.com/c8be01e5e1.js" crossorigin="anonymous"></script>
 
 </head>
-<body>
+<body class="home-body">
 <header>
     <section class="header-icons-container">
         <div class="icons">
@@ -34,7 +34,7 @@
         </section>
     </nav>
 </header>
-<main>
+<main class="super-main-container">
     <div class="main-container">
         <section class="main-title-container">
             <p class="main-title"> Proyectos, novedades y noticias del mundo tech</p>
