--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <p class="main-title"> Proyectos, novedades y noticias del mundo tech</p>
         </section>
         <section class="main-button-container">
-            <button class="main-button"> <a href="">Entra ya!</a></button>
+            <button class="main-button"> <a href="./blogs.html">Entra ya!</a></button>
         </section>
     </div>
 </main>
