arregle lo del main width 100%

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </section>
     </nav>
 </header>
-<main class="super-main-container">
+<main id="super-main-container" class="super-main-container">
     <div class="main-container">
         <section class="main-title-container">
             <p class="main-title"> Proyectos, novedades y noticias del mundo tech</p>
