blog page finished

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
             <a href="https://www.facebook.com/orlando.nabil1"><span><i class="fab fa-facebook"></i></span></a>
             <a href="https://www.facebook.com/orlando.nabil1"><span><i class="fab fa-twitter-square"></i></span></a>
             <a href="https://www.instagram.com/orlando_nabil"><span><i class="fab fa-instagram-square"></i></span></a>
-            <a href="https://www.instagram.com/orlando_nabil"><span><i class="fab fa-linkedin"></i></span></a>
+            <a href="https://github.com/nabilAparicio"><span><i class="fab fa-github-alt"></i></span></a>
             <a href="https://www.youtube.com/watch?v=dMsB-n2t4Ks"><span><i class="fab fa-youtube"></i></span></a>
         </div>
     </section>
     <nav>
         <section class="nav-logo-container">
-            <a href="/">
+            <a href="./index.html">
                 <img src="https://i.postimg.cc/7L1DBkjM/NA-BLOG.png" alt="logo de mi blog" class="nav-logo">
             </a>
         </section>
